<resources>
    <string name="app_name">Final App</string>
    <string name="final_app">FINAL APP</string>
    <string name="generar_curp">Generar CURP</string>
    <string name="amigo_secreto">AMIGO SECRETO</string>
    <string name="generar_rfc">Generar RFC</string>
    <string name="rfc_generator">Generador de RFC</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellidoP">Apellido Paterno</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="date">Fecha de Nacimiento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hombre">Masculino</string>
    <string name="seleccionar_fecha">Fecha de Nacimiento</string>
    <string name="fecha">Fecha</string>
    <string name="primer_nombr">Nombre(s)</string>
    <string name="primer_nombre">Nombre(s)</string>
    <string name="primer_apellido">Apellido Paterno</string>
    <string name="segundo_apellido">Apellido Materno</string>
    <string name="mujer">Femenino</string>
    <string name="crear">Crear</string>
    <string name="limpiar">Borrar</string>
    <string name="curp">CURP</string>
    <string name="estado">Lugar de Nacimiento</string>
    <string name="crea">Crear</string>
    <string name="resultado_rfc">RFC Generado</string>
</resources>