<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBack"
    tools:context=".Curp">

    <Button
        android:id="@+id/fechabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/seleccionar_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_G" />

    <TextView
        android:id="@+id/fechatxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="164dp"
        android:text="@string/fecha"
        app:layout_constraintStart_toEndOf="@+id/fechabtn"
        app:layout_constraintTop_toBottomOf="@+id/apellido2txt" />

    <EditText
        android:id="@+id/nombretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="41dp"
        android:autofillHints=""
        android:clickable="true"
        android:focusable="true"
        android:ems="10"
        android:hint="@string/primer_nombr"
        android:inputType="textPersonName"
        android:text="@string/primer_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellidotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="19dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/primer_apellido"
        android:inputType="textPersonName"
        android:text="@string/primer_apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombretxt" />

    <EditText
        android:id="@+id/apellido2txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/segundo_apellido"
        android:inputType="textPersonName"
        android:text="@string/segundo_apellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidotxt" />

    <RadioGroup
        android:id="@+id/radio_G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido2txt">

        <RadioButton
            android:id="@+id/radio_H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"></RadioButton>

        <RadioButton
            android:id="@+id/radio_M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer"></RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/btncrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:hint="@string/crear"
        android:text="@string/crea"
        app:layout_constraintEnd_toStartOf="@+id/btnlimpiar"
        app:layout_constraintTop_toBottomOf="@+id/fechabtn" />

    <Button
        android:id="@+id/btnlimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fechabtn" />

    <TextView
        android:id="@+id/curp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="20dp"
        android:text="@string/curp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncrear" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="121dp"
        android:layout_height="58dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/radio_G"
        app:layout_constraintTop_toBottomOf="@+id/apellido2txt" />

    <TextView
        android:id="@+id/Estadotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:text="@string/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>